feat(day): add method for add user weight for stats
