# src/days/dto/index.ts
@@ -3,3 +3,4 @@ export { DayResponseDto } from './day-response.dto';
 export { DayTotalsDto } from './day-totals.dto';
 export { GetCalendarDto } from './get-calendar.dto';
 export { MonthDetailsResponseDto } from './month-details-response.dto';
+export { UpdateWeightDto } from './update-weight.dto';
